# YCDL

./: CMakeLists.txt  README.md  readme.txt  run.sh  run_build.sh
conf/: config.json  dist_config.json  dist_nn_config.json  nn_config.json  test.json
data/uci_data/bank/: test
data/uci_data/dist_bank/: train_0  train_1
include/: all.h  dataload.h  dense_layer.h  dist_optimizer.h  eigen_func.h  generator.h  hash_method.h  init.h  instance.h  ioc.h  loss_func.h  lr.h  matrix_val.h  network.h  optimizer.h  tools.h
script/: kill.sh  ps_local.sh
src/: lr.cpp  lr_uci.cpp  lr_uci_dist.cpp  network.cpp  network_dist.cpp
test/: dataload.cpp  eigen.cpp  fibonacci.cpp  lr_test.cpp  range.cpp  test_json.cpp
